# EcoTrace-India

./: .env.example  .flake8  ARCHITECTURE.md  CHANGELOG.md  DATA_MODEL.md  DESIGN.md  Dockerfile  PROMPT_STRATEGY.md  Procfile  README.md  SPEC.md  TASK_LIST.md  app.py  calculator.py  config.py  constants.py  exceptions.py  gemini_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_app.py
data/: emission_factors.json
static/css/: style.css
static/js/: app.js
templates/: action_plan.html  calculator.html  chat.html  index.html  results.html  tracker.html
